--- a/src/components/article-item/article-item.scss
+++ b/src/components/article-item/article-item.scss
@@ -15,6 +15,7 @@
   justify-content: flex-start;
   flex-direction: row;
   align-items: center;
+  overflow: hidden;
 }
 
 .article-item__icon {
@@ -63,6 +64,7 @@
   font-size: 12px;
   line-height: 22px;
   color: rgba(0, 0, 0, 0.75);
+  overflow: hidden;
 }
 
 .article-item__like-btn {
@@ -83,4 +85,12 @@
 
 a {
   text-decoration: none;
+}
+
+.article-item__body {
+  overflow-wrap: break-word;
+}
+
+.article-item__article-tags {
+  overflow-x: clip;
 }
